--- a/contacts.html
+++ b/contacts.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <ul>
-      <li>My email:<a href="antonpovelicin@gmail.com">antonpovelicin@gmail.com</a></li>
-      <li>My phone number:<a href=""></a>0546281388</li>
-      <li>LInkedin:<a href="https://www.linkedin.com/in/anton-povelicin-827966137/">Profile</a></li>
-    </ul>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <h1>My Contact Details</h1>
+  <ul>
+    <li>My email:<a href="antonpovelicin@gmail.com">antonpovelicin@gmail.com</a></li>
+    <li>My phone number:<a href=""></a>0546281388</li>
+    <li>LInkedin:<a href="https://www.linkedin.com/in/anton-povelicin-827966137/">Profile</a></li>
+  </ul>
+  <hr>
+  <form class="" action="mailto:@antonpovelicin@gmail.com" method="post">
+
+    <label for="">Your Name:</label>
+    <input type="text" name="" value=""><br>
+    <label for="">Your Email:</label>
+    <input type="email" name="" value=""><br>
+    <label for="">You Message:</label><br>
+    <textarea name="name" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+
+  </form>
 
 
 
 
-  </body>
+</body>
+
 </html>
