--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <hr>
   <h3>Education and courses</h3>
   <ul>
-    <li>iOS And Android development courses</li>
-    <li>QA Testing courses</li>
+    <li>iOS And Android development courses at John Bryce Haifa</li>
+    <li>Quality Assurance courses at SV College Haifa</li>
+    <li>Bcs Computer Science student at Open University of Israel</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
@@ -76,7 +77,7 @@
   <hr>
   <h3><a href="Hobbies.html">My Hobbies</a></h3>
   <h3><a href="contacts.html">My Contacts</a></h3>
-  
+
 
 </body>
 
