Add background color to main page and css style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
   <meta name="keywords" content="">
   <meta charset="utf-8">
   <title>Anton's Personal Site</title>
+
+<style media="screen">
+
+body{
+  background-color: #ccf2f4;
+}
+hr{
+
+  border-style: none;
+  border-top-style: dotted;
+  width: 2.5%;
+  border-width: 5px;
+  color: grey;
+
+}
+
+</style>
+
+
+
+
+
 </head>
 
 <body>
